2006-05-01	Benedikt Meurer <benny@xfce.org>
	* configure.in.in, exo/exo-md5.c: RedHat/Fedora requires md5global.h
	  before md5.h can be used. Bug #1732.




(Old svn revision: 21417)

--- a/configure.in.in
+++ b/configure.in.in
@@ -82,8 +82,8 @@ dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
-                  md5.h mmintrin.h regex.h string.h sys/resource.h sys/stat.h \
-                  sys/time.h sys/types.h sys/wait.h time.h])
+                  md5.h md5global.h mmintrin.h regex.h string.h sys/resource.h \
+                  sys/stat.h sys/time.h sys/types.h sys/wait.h time.h])
 
 dnl ************************************
 dnl *** Check for standard functions ***
