--- a/configure.in.in
+++ b/configure.in.in
@@ -186,6 +186,18 @@ if test x"$enable_xsltproc" = x"yes"; then
 fi
 AM_CONDITIONAL([ENABLE_XSLTPROC], [test x"$enable_xsltproc" = x"yes"])
 
+dnl ************************
+dnl *** Check for xml2po ***
+dnl ************************
+AC_ARG_ENABLE([xml2po], [AC_HELP_STRING([--enable-xml2po], [Use xml2po to translate documentation @<:@default=no@:>@])],, [enable_xml2po=no])
+if test x"$enable_xml2po" = x"yes"; then
+  AC_PATH_PROG([XML2PO], [xml2po], [no])
+  if test x"$XML2PO" = x"no"; then
+    enable_xml2po=no
+  fi
+fi
+AM_CONDITIONAL([ENABLE_XML2PO], [test x"$enable_xml2po" = x"yes"])
+
 dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
@@ -255,6 +267,9 @@ docs/manual/Makefile
 docs/manual/C/Makefile
 docs/manual/C/exo-preferred-applications.xml
 docs/manual/C/images/Makefile
+docs/manual/ja/Makefile
+docs/manual/ja/exo-preferred-applications.xml
+docs/manual/ja/images/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
 exo.spec
@@ -268,6 +283,7 @@ exo-open/Makefile
 icons/Makefile
 icons/48x48/Makefile
 po/Makefile.in
+po-doc/Makefile
 python/Makefile
 python/examples/Makefile
 tests/Makefile
