--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -31,6 +31,7 @@ exo-helper/exo-helper-launcher-dialog.c
 exo-helper/exo-helper-utils.c
 exo-helper/exo-helper.c
 exo-helper/exo-preferred-applications-settings.c
+exo-helper/exo-preferred-applications.desktop.in
 exo-helper/helpers/Terminal.desktop.in
 exo-helper/helpers/balsa.desktop.in
 exo-helper/helpers/debian-sensible-browser.desktop.in
